--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -20,3 +20,12 @@ body {
 #twodoors {
   margin-left:21.5%;
 }
+
+.circle {
+  width:100px;
+  height:100px;
+  background-color:red;
+  border-radius: 50%;
+  position: absolute;
+  margin-top: -800px;
+}
