--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -7,25 +7,51 @@ body {
   background-color: rgb(23, 0, 65);
 }
 
-.doors {
-  width:35%;
+.sliding-doors{
+  width: 100%;
   height: 100vh;
-  background-color: rgb(217, 27, 56);
-  display: inline-block;
-  border-style: solid;
-  border-width: 5px;
-  border-color: rgb(255, 84, 84);
+  position: absolute;
+  overflow: hidden;
+  -moz-box-shadow:    inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow:         inset 0 0 10px #000000;
+  z-index: 2;
 }
 
-#twodoors {
-  margin-left:21.5%;
+.sliding-doors:before,
+.sliding-doors:after{
+  content: "";
+  width: 50%;
+  height: 100vh;
+  left: 0;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  -webkit-transition: 2000ms;
+  border: 3px solid rgba(0, 0, 0, 0.5);
+  background-color: rgb(201, 33, 43);
+}
+
+.sliding-doors:hover:before{
+  left: -600px;
+}
+
+.sliding-doors:hover:after{
+  left: 600px;
 }
 
 .circle {
-  width:100px;
-  height:100px;
-  background-color:red;
+  width:200px;
+  height:200px;
+  margin-left: 30%;
+  margin-right:30%;
   border-radius: 50%;
+  background-color: red;
+  position: relative;
+  z-index: 1;
+}
+
+h1 {
   position: absolute;
-  margin-top: -800px;
+  z-index:3;
 }
