--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -1,21 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Muli');
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   background-color: rgb(23, 0, 65);
+  font-family: 'Muli', sans-serif;
 }
 
 .sliding-doors{
   width: 100%;
   height: 100vh;
-  position: absolute;
+  position: relative;
   overflow: hidden;
-  -moz-box-shadow:    inset 0 0 10px #000000;
-  -webkit-box-shadow: inset 0 0 10px #000000;
-  box-shadow:         inset 0 0 10px #000000;
-  z-index: 2;
 }
 
 .sliding-doors:before,
@@ -27,31 +27,54 @@ body {
   position: relative;
   display: inline-block;
   box-sizing: border-box;
-  -webkit-transition: 2000ms;
+  -webkit-transition: 1500ms;
   border: 3px solid rgba(0, 0, 0, 0.5);
   background-color: rgb(201, 33, 43);
 }
 
+
 .sliding-doors:hover:before{
   left: -600px;
+    opacity: 0;
 }
 
 .sliding-doors:hover:after{
   left: 600px;
+  opacity: 0;
 }
 
-.circle {
-  width:200px;
-  height:200px;
-  margin-left: 30%;
-  margin-right:30%;
-  border-radius: 50%;
-  background-color: red;
-  position: relative;
-  z-index: 1;
+.input {
+  position: absolute;
+  background-color: rgb(201, 33, 43);
+  width:40%;
+  margin-left:30%;
+  height:auto;
+  margin-top:-500px;
+  border-radius: 20px;
+  color:white;
+  padding:60px;
+  display:none;
 }
 
 h1 {
-  position: absolute;
-  z-index:3;
+  font-size: 36px;
+}
+
+h2 {
+  padding-top:20px;
+}
+
+input {
+  border: none;
+  padding:10px;
+  height:30px;
+  border-radius: 5px;
+  width:100%;
+}
+
+button {
+  background-color:white;
+  border-radius: 5px;
+  width:40%;
+  margin-left:30%;
 }
