--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -28,7 +28,6 @@ body {
   display: inline-block;
   box-sizing: border-box;
   -webkit-transition: 1500ms;
-  border: 3px solid rgba(0, 0, 0, 0.5);
   background-color: rgb(201, 33, 43);
 }
 
@@ -45,15 +44,14 @@ body {
 
 .input {
   position: absolute;
-  background-color: rgb(201, 33, 43);
-  width:40%;
-  margin-left:30%;
-  height:auto;
+  width:36%;
   margin-top:-500px;
   border-radius: 20px;
   color:white;
   padding:60px;
+  background: none !important;
   display:none;
+  margin-left:2.5%;
 }
 
 h1 {
@@ -66,15 +64,25 @@ h2 {
 
 input {
   border: none;
-  padding:10px;
-  height:30px;
+  padding:20px;
   border-radius: 5px;
   width:100%;
+  margin-top:30px;
 }
 
 button {
   background-color:white;
   border-radius: 5px;
-  width:40%;
-  margin-left:30%;
+  padding:10px;
+  border: none;
+  margin-top: 15px;
+  width:100%;
+  height:60px;
+  cursor: pointer;
+}
+
+input, button {
+    font-family: 'Muli', sans-serif;
+    font-size: 16px;
+    outline: none;
 }
