--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -86,3 +86,23 @@ input, button {
     font-size: 16px;
     outline: none;
 }
+
+#today {
+  color:red;
+  font-size: 300px;
+}
+
+.tgif {
+  animation-name: tgif;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes tgif {
+  0% { color: red; }
+  20% { color: pink; }
+  40% { color: magenta; }
+  60% { color: orange; }
+  80% { color: yellow; }
+  100% { color: purple; }
+}
