--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -1,23 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 
+/* General resets*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  background-color: rgb(23, 0, 65);
-  font-family: 'Muli', sans-serif;
-}
-
+/*sliding doors effect*/
 .sliding-doors{
   width: 100%;
   height: 100vh;
   position: relative;
   overflow: hidden;
 }
-
 .sliding-doors:before,
 .sliding-doors:after{
   content: "";
@@ -30,18 +26,16 @@ body {
   -webkit-transition: 1500ms;
   background-color: rgb(201, 33, 43);
 }
-
-
 .sliding-doors:hover:before{
   left: -600px;
     opacity: 0;
 }
-
 .sliding-doors:hover:after{
   left: 600px;
   opacity: 0;
 }
 
+/* Starting user input entry*/
 .input {
   position: absolute;
   width:36%;
@@ -87,22 +81,15 @@ input, button {
     outline: none;
 }
 
-#today {
-  color:red;
-  font-size: 300px;
+/* General styles*/
+body {
+  background-color: rgb(23, 0, 65);
+  font-family: 'Muli', sans-serif;
 }
 
-.tgif {
-  animation-name: tgif;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes tgif {
-  0% { color: red; }
-  20% { color: pink; }
-  40% { color: magenta; }
-  60% { color: orange; }
-  80% { color: yellow; }
-  100% { color: purple; }
+#block {
+  width:400px;
+  height:400px;
+  background-color: olive;
+  display: none;
 }
