--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -87,9 +87,116 @@ body {
   font-family: 'Muli', sans-serif;
 }
 
-#block {
-  width:400px;
-  height:400px;
-  background-color: olive;
-  display: none;
+.loader-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+
+.loader-wrapper .text {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  margin: 0 0 150px;
+}
+
+.text h1 {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: bold;
+    color:red;
+}
+
+.text h2 {
+    font-size: 16px;
+      color:purple;
+}
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 700px;
+  height: 30px;
+  border-left: 8px solid red;
+  border-right: 8px solid red;
+  overflow: hidden;
+}
+
+.loader .ball {
+  height: 10px;
+  width: 0;
+  background: red;
+  position: relative;
+  margin: 0;
+}
+
+.loader .ball:nth-child(1) {
+  -webkit-animation: ball 2s ease-in-out infinite;
+  animation: ball 2s ease-in-out infinite;
+}
+
+.loader .ball:nth-child(2) {
+  -webkit-animation: ball 2s ease-in-out .1s infinite;
+  animation: ball 2s ease-in-out .1s infinite;
+  background: purple;
+}
+
+.loader .ball:nth-child(3) {
+  -webkit-animation: ball 2s ease-in-out .2s infinite;
+  animation: ball 2s ease-in-out .2s infinite;
+  background: yellow;
+}
+
+@-webkit-keyframes ball {
+  0% {
+    left: 0;
+    width: 0px;
+  }
+  25% {
+    left: 0;
+    width: 700px;
+  }
+  50% {
+    left: 700px;
+    width: 0px;
+  }
+  75% {
+    left: 0;
+    width: 700px;
+  }
+  100% {
+    left: 0;
+    width: 0px;
+  }
+}
+
+@keyframes ball {
+  0% {
+    left: 0;
+    width: 0px;
+  }
+  25% {
+    left: 0;
+    width: 700px;
+  }
+  50% {
+    left: 700px;
+    width: 0px;
+  }
+  75% {
+    left: 0;
+    width: 700px;
+  }
+  100% {
+    left: 0;
+    width: 0px;
+  }
 }
