--- a/Assignments/Assignment1/css/style.css
+++ b/Assignments/Assignment1/css/style.css
@@ -105,6 +105,10 @@ body {
   margin: 0 0 150px;
 }
 
+.text {
+  text-align: center;
+}
+
 .text h1 {
   text-transform: uppercase;
   font-size: 24px;
