--- a/Exercises/Exercise06/css/style.css
+++ b/Exercises/Exercise06/css/style.css
@@ -1,17 +1,8 @@
-/*
-
-Color Controller
-Pippin Barr
-
-Some basic styling for our example.
-
-*/
 
 body {
   margin: 0;
 }
 
-/* Mostly just styling the div so it sits in the center of the screen. */
 #color {
   position: absolute;
   margin: auto;
@@ -19,8 +10,8 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100vh;
   background-color: rgba(200,200,200,1);
 }
 
