--- a/Exercises/Exercise06/css/style.css
+++ b/Exercises/Exercise06/css/style.css
@@ -13,6 +13,11 @@ body {
   width: 100%;
   height: 100vh;
   background-color: rgba(200,200,200,1);
+  color:white;
+  font-size: 150px;
+  font-family: sans-serif;
+  padding-top:400px;
+  text-align: center;
 }
 
 video {
