--- a/Exercises/Exercise07/css/style.css
+++ b/Exercises/Exercise07/css/style.css
@@ -1,35 +1,19 @@
-/*
 
-ScrollMagic with TweenMax
-Pippin Barr
-
-Basic styling.
-
-*/
+@import url('https://fonts.googleapis.com/css?family=Bree+Serif');
 
 body {
-  margin-top: 400px;
-  margin-bottom: 400px;
+  font-family: 'Bree Serif', serif;
+  font-weight: normal;
+  background-color: rgb(0, 173, 247);
 }
 
-.block {
-  height: 200px;
-  width: 200px;
-  margin-left: 60%;
-  background-color: hotpink;
-  font-family: sans-serif;
-  font-size: 2em;
-  font-weight: bold;
-  text-align: center;
-}
-
-#fixedblock {
-  position: fixed;
-  top: 100px;
-  left: 100px;
-  margin: 0;
-}
-
-#trigger {
+#trigger1 {
   background-color: yellow;
+  padding:20px;
+  height:100vh;
+  width:400%;
+}
+
+h1 {
+  font-size: 50px;
 }
