--- a/Exercises/Exercise07/css/style.css
+++ b/Exercises/Exercise07/css/style.css
@@ -1,19 +1,44 @@
 
 @import url('https://fonts.googleapis.com/css?family=Bree+Serif');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Bree Serif', serif;
   font-weight: normal;
-  background-color: rgb(0, 173, 247);
+  background-color: rgba(255, 81, 34, 1);
 }
 
 #trigger1 {
   background-color: yellow;
   padding:20px;
-  height:100vh;
-  width:400%;
+  width:100%;
+  height:1200px;
+  text-align: center;
+  color: #402c00;
+
 }
 
 h1 {
+  font-size: 72px;
+  letter-spacing: 2px;
+  margin-top: 30%;
+}
+
+h2 {
   font-size: 50px;
+  padding-top: 10px;
+}
+
+.header {
+  opacity: 0;
+}
+
+.subtitle {
+  margin-left:-180px;
+  opacity: 0;
 }
