--- a/Exercises/Exercise07/css/style.css
+++ b/Exercises/Exercise07/css/style.css
@@ -13,14 +13,18 @@ body {
   background-color: rgba(255, 81, 34, 1);
 }
 
+p {
+  font-size: 18px;
+  margin-top: 20px;
+}
+
 #trigger1 {
   background-color: yellow;
   padding:20px;
   width:100%;
-  height:1200px;
+  height:1000px;
   text-align: center;
-  color: #402c00;
-
+  color: white;
 }
 
 h1 {
@@ -41,4 +45,34 @@ h2 {
 .subtitle {
   margin-left:-180px;
   opacity: 0;
+}
+
+#trigger2 {
+  margin-top: 100px;
+  width:70%;
+  padding:40px;
+  background-color: rgba(255, 81, 34, 1);
+  margin-left:-1000px;
+  color: rgba(97, 21, 0, 1);
+  -webkit-column-count: 2; /* Chrome, Safari, Opera */
+-moz-column-count: 2; /* Firefox */
+column-count: 2;
+-webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+  -moz-column-gap: 40px; /* Firefox */
+column-gap: 40px;
+}
+
+h3 {
+  font-size: 36px;
+  background-color: yellow;
+  margin-top: 30px;
+  padding:20px;
+  display: inline-block;
+}
+
+#trigger3 {
+  width:50%;
+  margin-left: 1200px;
+  margin-top: 80px;
+  opacity:0;
 }
