--- a/Exercises/Exercise07/css/style.css
+++ b/Exercises/Exercise07/css/style.css
@@ -36,6 +36,8 @@ h1 {
 h2 {
   font-size: 50px;
   padding-top: 10px;
+  color: white;
+  letter-spacing: 2px;
 }
 
 .header {
@@ -47,7 +49,7 @@ h2 {
   opacity: 0;
 }
 
-#trigger2 {
+.trigger2 {
   margin-top: 100px;
   width:70%;
   padding:40px;
@@ -68,11 +70,81 @@ h3 {
   margin-top: 30px;
   padding:20px;
   display: inline-block;
+  margin-right: 20px;
 }
 
 #trigger3 {
-  width:50%;
-  margin-left: 1200px;
+  width:30%;
+  margin-left: 700px;
   margin-top: 80px;
   opacity:0;
+}
+
+a {
+  width:200px;
+  height:200px;
+  background-color: white;
+  display: inline-block;
+  float: left;
+  margin-left:0px;
+  text-decoration: none;
+  padding:20px;
+  color: rgba(255, 81, 34, 1);
+  margin-top: 50px;
+  font-size: 36px;
+  text-align: center;
+  line-height: 40px;
+  padding-top: 60px;
+  opacity: 0;
+}
+
+#trigger4 {
+  margin-left: 250px;
+  margin-top:300px;
+  margin-bottom:300px;
+}
+
+#trigger5 {
+  margin-left: 250px;
+}
+
+.extend {
+  width:50%;
+}
+
+#trigger6 {
+  margin-left: -1000px;
+  margin-top:200px;
+  width:40%;
+  padding:40px;
+  background-color: yellow;
+  color: rgba(97, 21, 0, 1);
+}
+
+#trigger6 p {
+  line-height: 20px;
+}
+
+#trigger7 {
+  margin-top: 200px;
+}
+
+img {
+  margin-top: 40px;
+}
+
+#image1 {
+  margin-left: 2000px;
+  opacity:0;
+}
+
+#image2 {
+  margin-left: -2000px;
+  opacity:0;
+}
+
+#image3 {
+  opacity: 0;
+  margin-left: 2000px;
+  padding-bottom: 100px;
 }
