--- a/Exercises/Exercise09/css/style.css
+++ b/Exercises/Exercise09/css/style.css
@@ -1,15 +1,62 @@
-/*
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand');
 
-Condiments
-Pippin Barr
-
-Basic CSS
-
-*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  margin: 2em;
-  font-family: sans-serif;
-  font-size: 4em;
-  font-weight: bold;
+  font-family: 'Gochi Hand', cursive;
+  color: green;
+  height:100%;
+  background:
+    linear-gradient(
+      limegreen,
+      transparent
+    ),
+    linear-gradient(
+      90deg,
+      skyblue,
+      transparent
+    ),
+    linear-gradient(
+      -90deg,
+      coral,
+      transparent
+    );
+  background-blend-mode: screen;
+  width:100%;
+  height: 100vh;
+}
+
+div {
+  width:80%;
+  margin-left: 10%;
+  margin-top: 250px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 100px;
+}
+
+h3 {
+  display: inline-block;
+  font-size: 50px;
+  padding: 10px;
+}
+
+#firstname, #lastname, #moods {
+    background-color: white;
+    color: orange;
+}
+
+#firstname {
+  margin-right: 10px;
+}
+
+h2 {
+  margin-top: 200px;
+  font-size: 30px;
 }
