--- a/Assignments/Assignment2/css/style.css
+++ b/Assignments/Assignment2/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Righteous');
+
 * {
   margin:0;
   padding:0;
@@ -5,11 +7,12 @@
 }
 
 body {
-  background-color: yellow;
+  background-color: #10143e;
 }
 
 canvas {
   z-index: 1;
+  width:100%;
 }
 
 #webcam {
@@ -27,12 +30,72 @@ canvas {
 
 #login {
   width:38.1%;
-  background-color: yellow;
+  background-color: #10143e;
   display: inline-block;
   float: right;
   height: 100vh;
+  padding: 40px;
+  font-size: 36px;
 }
 
 #scanning {
-  display: none;
+  font-family: 'Righteous', cursive;
+  color:#fed402;
 }
+
+.pulse1 {
+	-webkit-animation: pulse1 1s linear infinite;
+	-moz-animation: pulse1 1s linear infinite;
+	-ms-animation: pulse1 1s linear infinite;
+	animation: pulse1 1s linear infinite;
+}
+
+@keyframes "pulse1" {
+ 0% {
+    color: rgba(165, 25, 25, 1);
+ }
+ 90% {
+    color: rgba(255,0,0,0.0);
+ }
+ 100% {
+    color:#fed402;
+ }
+
+}
+
+@-moz-keyframes pulse1 {
+ 0% {
+   color: rgba(165, 25, 25, 1);
+ }
+ 90% {
+   color: rgba(255,0,0,0.0);
+ }
+ 100% {
+   color:#fed402;
+ }
+
+}
+
+@-webkit-keyframes "pulse1" {
+ 0% {
+   color: rgba(165, 25, 25, 1);
+ }
+ 90% {
+   color: rgba(255,0,0,0.0);
+ }
+ 100% {
+   color:#fed402;
+ }
+
+}
+
+@-ms-keyframes "pulse1" {
+ 0% {
+   color: rgba(165, 25, 25, 1);
+ }
+ 90% {
+   color: rgba(255,0,0,0.0);
+ }
+ 100% {
+   color:#fed402;
+ }
