--- a/Assignments/Assignment2/css/style.css
+++ b/Assignments/Assignment2/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Righteous');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 * {
   margin:0;
@@ -8,6 +9,7 @@
 
 body {
   background-color: #10143e;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 canvas {
@@ -34,13 +36,27 @@ canvas {
   display: inline-block;
   float: right;
   height: 100vh;
-  padding: 40px;
-  font-size: 36px;
+  padding: 60px;
+}
+
+h1 {
+  font-size: 55px;
+  font-family: 'Righteous', cursive;
+  color: #fed402;
+}
+
+h2 {
+  font-size: 22px;
+  font-family: 'Open Sans', sans-serif;
+  color: rgb(35, 229, 252);
+  margin-top: 30px;
 }
 
 #scanning {
   font-family: 'Righteous', cursive;
   color:#fed402;
+  font-size: 30px;
+  margin-top: 100px;
 }
 
 .pulse1 {
@@ -52,10 +68,10 @@ canvas {
 
 @keyframes "pulse1" {
  0% {
-    color: rgba(165, 25, 25, 1);
+    color:#2b2400;
  }
  90% {
-    color: rgba(255,0,0,0.0);
+    color: #bd9d00;
  }
  100% {
     color:#fed402;
@@ -64,38 +80,38 @@ canvas {
 }
 
 @-moz-keyframes pulse1 {
- 0% {
-   color: rgba(165, 25, 25, 1);
- }
- 90% {
-   color: rgba(255,0,0,0.0);
- }
- 100% {
-   color:#fed402;
- }
+  0% {
+     color:#2b2400;
+  }
+  90% {
+     color: #bd9d00;
+  }
+  100% {
+     color:#fed402;
+  }
 
 }
 
 @-webkit-keyframes "pulse1" {
- 0% {
-   color: rgba(165, 25, 25, 1);
- }
- 90% {
-   color: rgba(255,0,0,0.0);
- }
- 100% {
-   color:#fed402;
- }
+  0% {
+     color:#2b2400;
+  }
+  90% {
+     color: #bd9d00;
+  }
+  100% {
+     color:#fed402;
+  }
 
 }
 
 @-ms-keyframes "pulse1" {
- 0% {
-   color: rgba(165, 25, 25, 1);
- }
- 90% {
-   color: rgba(255,0,0,0.0);
- }
- 100% {
-   color:#fed402;
- }
+  0% {
+     color:#2b2400;
+  }
+  90% {
+     color: #bd9d00;
+  }
+  100% {
+     color:#fed402;
+  }
