Prepared files for the Virtual Doctor dashboard coding.

--- a/Assignments/Assignment2/css/style.css
+++ b/Assignments/Assignment2/css/style.css
@@ -48,7 +48,7 @@ h1 {
 h2 {
   font-size: 22px;
   font-family: 'Open Sans', sans-serif;
-  color: rgb(28, 164, 214);
+  color: #1ca4d6;
   margin-top: 30px;
 }
 
