--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -31,6 +31,7 @@ h2 {
   font-family:'Open Sans', sans-serif;
   /*color: #1ca4d6;*/
   font-size: 30px;
+  color: #1ca4d6;
 }
 
 #title {
@@ -40,16 +41,16 @@ h2 {
 
 #dashboard {
   width:80%;
-  background-color: red;
+  /*background-color: red;*/
   display: inline-block;
   margin-left: 2.5%;
 }
 
 #navigation {
   width:15%;
-  background-color: yellow;
+  background-color: white;
   display: inline-block;
-  height:600px;
+  height:637px;
   float: left;
   margin-left: 2.5%;
 }
@@ -59,6 +60,7 @@ section {
   height:300px;
   background-color:#fed402;
   display: inline-block;
+  margin-bottom: 2.5%;
 }
 
 .draggable {
@@ -69,7 +71,21 @@ section {
 .ui-resizable-se {
   width: 0px;
   height: 0px;
-  border-style: solid;
-  border-width: 0 0 16px 16px;
+  border-style:solid;
+  border-color: #10143e;
+  border-width: 0 0 75px 75px;
   background: none;
+  display: inline-block;
+  float: right;
+}
+
+.margin {
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+}
+
+#dashboard h2 {
+  display: block;
+  width: 100%;
+  height:225px;
 }
