--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -58,7 +58,7 @@ h2 {
 section {
   width:30%;
   height:300px;
-  background-color:#fed402;
+  background-color:#1ca4d6;
   display: inline-block;
   margin-bottom: 2.5%;
 }
@@ -88,4 +88,6 @@ section {
   display: block;
   width: 100%;
   height:225px;
+  font-family: 'Righteous', cursive;
+  color:#fed402;
 }
