--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -15,6 +15,7 @@ font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -32,6 +33,7 @@ h2 {
   /*color: #1ca4d6;*/
   font-size: 30px;
   color: #1ca4d6;
+  font-weight: normal;
 }
 
 #title {
@@ -95,6 +97,7 @@ h2 {
   font-size: 40px;
   text-transform: uppercase;
   padding: 20px;
+  font-weight: bold;
 }
 
 p {
@@ -107,8 +110,25 @@ p {
 h3, h4 {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
+  line-height: 30px;
 }
 
 h3 {
   text-transform: uppercase;
+  color:#1ca4d6;
+}
+
+h4 {
+    font-weight: normal;
+    color: #10143e;
+    cursor: pointer;
+    padding-left: 10px;
+}
+
+#profile {
+  margin-bottom: 20px;
+}
+
+#offrearrange {
+  display:none;
 }
