Added s to HTTP

--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -121,7 +121,6 @@ h3 {
 h4 {
     font-weight: normal;
     color: #10143e;
-    cursor: pointer;
     padding-left: 10px;
 }
 
@@ -131,4 +130,8 @@ h4 {
 
 #offrearrange {
   display:none;
+}
+
+button {
+  cursor: pointer;
 }
