--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -129,9 +129,29 @@ h4 {
 
 button {
   cursor: pointer;
+  background-color: #fed402;
+  padding:5px;
+  width: 40%;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  font-size: 14px;
 }
 
 .profileheader {
   margin-top: 15px;
   font-weight: bold;
+}
+
+.buttonleft {
+  margin-left: 10px;
+}
+
+.buttonright {
+  margin-left: 5px;
+}
+
+h3 {
+  margin-bottom: 10px;
 }
