--- a/Assignments/Assignment2/css/diagnosis_center.css
+++ b/Assignments/Assignment2/css/diagnosis_center.css
@@ -4,9 +4,8 @@
 }
 
 #diagnosis-reveal {
-  width:800px;
-  height:300px;
-  background-color: yellow;
+  height:600px;
+  background-color: red;
   z-index: 2;
   display: none;
 }
