Fixed a bug in the resizable and draggable functions

--- a/Assignments/Assignment2/css/diagnosis_center.css
+++ b/Assignments/Assignment2/css/diagnosis_center.css
@@ -1,7 +1,7 @@
 
-#xray, #psychologist, #heartrate, #workout, #pharmacy {
+/*#xray, #psychologist, #heartrate, #workout, #pharmacy {
   z-index: -1;
-}
+}*/
 
 #diagnosis-reveal {
   height:600px;
