Added a addClass function to revealing elements in the diagnosis center.

--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -80,7 +80,7 @@ h2 {
   border-width: 0 0 10px 10px;
   background: none;
   display: inline-block;
-  float: left;
+  float: right;
   padding: 10px;
   position: absolute;
   bottom: 0;
