--- a/Assignments/Assignment2/css/diagnosis_center.css
+++ b/Assignments/Assignment2/css/diagnosis_center.css
@@ -4,8 +4,18 @@
 }*/
 
 #diagnosis-reveal {
-  height:600px;
   background-color: red;
   z-index: 2;
   display: none;
+  margin-left: 20px;
+}
+
+.p-diagnosisreveal {
+  color: white;
+  font-size: 24px;
+  width:400px;
+}
+
+.redbkg {
+  background-color: red;
 }
