--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -101,10 +101,12 @@ h2 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 24px;
   font-family: 'Open Sans', sans-serif;
   color: #10143e;
-  padding: 0px 0px 20px 20px;
+  margin: 0px 20px 12px 20px;
+  width: 200px;
+  display: inline-block;
 }
 
 h3 {
@@ -154,4 +156,8 @@ button {
 
 h3 {
   margin-bottom: 10px;
+}
+
+img {
+  width:100px;
 }
