--- a/Assignments/Assignment2/css/diagnosis_center.css
+++ b/Assignments/Assignment2/css/diagnosis_center.css
@@ -27,7 +27,32 @@
 }
 
 #chart {
-  margin-top: 20px;
+  margin-top: 100px;
   color:white;
   font-weight:bold;
+}
+
+#possible-diagnoses {
+  width: 500px;
+  font-size: 21px;
+  display: inline-block;
+  float: right;
+  position: fixed;
+  margin-top: 135px;
+  margin-left: 50px;
+}
+
+#possible-diagnoses h3 {
+  color:yellow;
+}
+
+#chartValue1, #chartValue2, #chartValue3 {
+  color:yellow;
+  font-size: 40px;
+  font-weight:bold;
+}
+
+#chartDiagnosis1, #chartDiagnosis2, #chartDiagnosis3 {
+  color:white;
+  margin-bottom: 10px;
 }
