--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -105,7 +105,7 @@ p {
   font-family: 'Open Sans', sans-serif;
   color: #10143e;
   margin: 0px 20px 12px 20px;
-  width: 200px;
+  width: 60%;
   display: inline-block;
 }
 
