--- a/Assignments/Assignment2/css/diagnosis_center.css
+++ b/Assignments/Assignment2/css/diagnosis_center.css
@@ -75,13 +75,47 @@
   margin-top: 200px;
 }
 
-#remove {
+h5 {
   font-size:21px;
   font-family: 'Open Sans', sans-serif;
   color:white;
   font-weight: normal;
-  width: 600px;
+  width: 40%;
   display:inline-block;
-  margin-left: 40px;
   margin-top: 40px;
+}
+
+li {
+  list-style: none;
+  padding: 5px;
+  background: #f5f5f5;
+  border-radius: 5px;
+  margin: 0 0 5px;
+}
+ul {
+  padding: 10px;
+  width: 30%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+ul.over {
+  padding-bottom: 55px;
+}
+ul.over li {
+  background: #fff;
+}
+
+#board {
+  width:50%;
+  display: inline-block;
+  position:fixed;
+  margin-left: 80px;
+}
+
+#board h5 {
+  font-family: 'Righteous', cursive;
+  display: inline-block;
+  width: 30%;
+  color:yellow;
 }
