--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -59,13 +59,17 @@ h2 {
 }
 
 #dashboard section {
-  max-width:30%;
+  width:47.5%;
   min-height: 300px;
   background-color:#1ca4d6;
   display: inline-block;
   margin-bottom: 2.5%;
   position: relative;
   float: left;
+}
+
+#diagnosiscenter, #heartrate {
+  margin-right: 2.5%;
 }
 
 .draggable {
@@ -284,4 +288,15 @@ input {
 
 #dashboard img {
   width:22.5%;
+}
+
+#heartrate h4 {
+  color:white;
+  font-size:50px;
+  text-transform: uppercase;
+  font-family: 'Righteous', cursive;
+}
+
+#rateresults {
+  text-align: center;
 }
