--- a/Assignments/Assignment2/css/dashboard.css
+++ b/Assignments/Assignment2/css/dashboard.css
@@ -306,7 +306,6 @@ input {
   display: inline-block;
   float: left;
   padding:30px;
-  color:white;
 }
 .drugsa {
   background-color: red;
@@ -328,6 +327,246 @@ outline: 1px solid transparent;
 
 .drugsb {
   background-color: blue;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsc {
+  background-color: green;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsd {
+  background-color:lightsalmon;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -10000px;
+}
+
+.drugse {
+  background-color: orange;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top:-10000px;
+}
+
+.drugsf {
+  background-color: pink;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top:-10000px;
+}
+
+.drugsg {
+  background-color: olive;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -900px;
+}
+
+.drugsh {
+  background-color: gray;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -900px;
+}
+
+.drugsi {
+  background-color: blueviolet;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -900px;
+}
+
+.drugsj {
+  background-color: brown;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -1200px;
+}
+
+.drugsk {
+  background-color: chartreuse;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -1200px;
+}
+
+.drugsl {
+  background-color: crimson;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -1200px;
+}
+
+.drugsm {
+  background-color: darkcyan;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -1500px;
+}
+
+.drugsn {
+  background-color:goldenrod;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top:-1500px;
+}
+
+.drugso {
+  background-color: greenyellow;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top:-1500px;
+}
+
+.drugsp {
+  background-color:hotpink;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsq {
+  background-color:indigo;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsr {
+  background-color:khaki;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugss {
+  background-color:lime;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugst {
+  background-color:mediumblue;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsu {
+  background-color:orangered;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsv {
+  background-color:orchid;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsw {
+  background-color:peru;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsx {
+  background-color:royalblue;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsy {
+  background-color:seagreen;
+  width:300px;
+  border: 4px solid $icon-color;
+  animation: roll 500s infinite;
+  transform-origin: center;
+  outline: 1px solid transparent;
+  margin-top: -300px;
+}
+
+.drugsz {
+  background-color:sandybrown;
   width:300px;
   border: 4px solid $icon-color;
   animation: roll 500s infinite;
